# Rev-Ops-Forecasting-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  screener_history.csv  screener_results.csv
.github/workflows/: daily_screener.yml
screener/: config.py  data_fetcher.py  indicators.py  scorer.py  sheets_writer.py
src/revops_forecast_agent/: __init__.py  briefing.py  cli.py  models.py  reports.py
src/revops_forecast_agent/agent/: __init__.py  interviewer.py  prompts.py  reconciliation.py  synthesizer.py
src/revops_forecast_agent/salesforce/: __init__.py  client.py
src/revops_forecast_agent/voice/: __init__.py  pipecat_pipeline.py
tests/: test_briefing.py  test_mock_salesforce.py  test_models.py  test_reconciliation.py  test_synthesizer.py
